2009-05-17  Per Bothner  <per@bothner.com>

	* WeakIdentityHashMap.java: New class, extends AbstractHashTable.
	* Makefile.am: Update accordingly.
	* AbstractHashTable.java (makeEntry): New method.
	(put*2, remove): Add new default methods.
	* GeneralHashTable.java (put*2, remove):  Remove methods.
	* WeakHashNode.java: Extend WeakReference<K> rather than
	WeakReference<V> and add value field, so this class can be ued by
	both AbstractWeakHashTable and WeakIdentityHashMap.
	* AbstractWeakHashTable.java: Update accordingly.
	(hash): New method.
	(cleanup): Make a more abstract static method that can also be
	used by WeakIdentityHashMap.

2009-03-15  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (DEFAULT_INITIAL_SIZE): New constant.

2009-03-07  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java (getNode): New (or rather restored) method.
	(get): Re-implement to use getNode.
	* GeneralHashTable.java (getNode): New method. 

2009-02-25  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java: New abstract superclass of GeneralHashTable.
	* GeneralHashTable.java: Change to extend AbstractHashTable,
	and make generic.
	* HashNode.java: Make generic.
	* IdentityHashTable.java: Likewise.
	* AbstractWeakHashTable.java: New generic class, extends 
	AbstractHashTable.
	* WeakHashNode.java: New class, used by AbstractWeakHashTable.
	* Makefile.am: Update accordingly.

2009-01-17  Per Bothner  <per@bothner.com>

	* PreProcess.java (version_features): New Android pre-processor tag..

2008-12-25  Per Bothner  <per@bothner.com>

	* PreProcess.java: Partially revert previous check-in:
	Don't enable JAXP-QName even if Java5 or Java5.

2008-12-23  Per Bothner  <per@bothner.com>

	* PreProcess.java:  Support "android" as a new "version".
	Add 'use:javax.xml.transform' as a new directive.

2008-10-24  Per Bothner  <per@bothner.com>

	* IdentityHashTable.java: New class, extends GeneralHashTable.
	* Makefile.am: Update accordingly.
